syntax = "proto3";
package com.example.grpc;

message BookRequest {
  string title = 1;
  string author = 2;
}

message BookResponse {
  string id = 1;
  string title = 2;
  string author = 3;
}

message BookResponseList {
  repeated BookResponse bookResponse = 1;
}

message Empty {}

service BookService {
  rpc saveBook(BookRequest) returns (BookResponse);
  rpc getBooks(Empty) returns (BookResponseList);
}